tests/ui/parser/issues/issue-62913.stderr
error: incorrect unicode escape sequence
  --> $DIR/issue-62913.rs:1:2
   |
LL | "\u\"
   |  ^^^ incorrect unicode escape sequence
   |
   = help: format of unicode escape sequences is `\u{...}`

error: invalid trailing slash in literal
  --> $DIR/issue-62913.rs:1:5
   |
LL | "\u\"
   |     ^ invalid trailing slash in literal

error: expected item, found `"\u\"`
  --> $DIR/issue-62913.rs:1:1
   |
LL | "\u\"
   | ^^^^^^ expected item

error: aborting due to 3 previous errors

